significant performance improvement, added sketch effect

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                     <option value="emboss">Emboss</option>
                     <option value="grudge">Grudge</option>
                     <option value="inverted">Inverted</option>
+                    <option value="sketch">Sketch?</option>
                     <option value="custom">Custom</option>
                 </select>
             </div>
